[package]
name = "biogarden"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray  = "0.15.4"
anyhow = "1.0"
serde = {version="1.0", features=["derive"]}
hashbrown = " 0.12.0"
rand = "0.8.5"
rand_isaac = "0.3.0"
rand_core = "0.6.3"
statrs = "0.15"
itertools = "0.8.2"
allwords = "0.1.2"
num = "0.2.1"
lazy_static = "1.4.0"